Fixed the overflow on small layouts with the new items.

--- a/sites/all/themes/lapcat/less/compiled.css
+++ b/sites/all/themes/lapcat/less/compiled.css
@@ -113,7 +113,7 @@ input[type="submit"]{font-size:1em;height:1.6em;}
 .user-picture img{height:40px;width:40px;}
 .articleBox,.articleContainerBox,.containerBox,.bookBox{position:relative;background:#FFF;min-height:100px;}
 .articleContainerBox,.deliciousContainer,.containerBox{padding:30px 5px 5px 5px;}
-.articleEntryTitle{font-size:20px;min-width:250px;max-width:500px;border-bottom:#1d1d1d solid 1px;margin-bottom:3px;}
+.articleEntryTitle{font-size:20px;width:500px;border-bottom:#1d1d1d solid 1px;margin-bottom:3px;}
 .articleEntryTitle a{color:#556644;}
 .articleEntryTitle a:hover{text-decoration:none;}
 .articleEntryAuthor{font-size:10px;color:#1d1d1d;}.articleEntryAuthor img{height:24px;width:24px;}
