--- a/sites/all/themes/lapcat/less/layout.less
+++ b/sites/all/themes/lapcat/less/layout.less
@@ -373,11 +373,9 @@ input[type="submit"]{
 }
 .articleEntryTitle{
   font-size:20px;
-  min-width:250px;
-  max-width:500px;
+  width:500px;
   border-bottom:@colorDark solid 1px;
   margin-bottom:3px;
-  
 }
 .articleEntryTitle a{
   color:@color3;
