--- a/sites/all/themes/lapcat/less/mediaQueries.less
+++ b/sites/all/themes/lapcat/less/mediaQueries.less
@@ -110,7 +110,14 @@
 @media only screen and (min-width:12.5em){ /*everything should be here*/
   .mainArea{
     padding-top:.5em;
-  }    
+  }
+  .articleEntryTitle{
+    font-size:1.2em;
+    width:100%;
+  }
+  .bookCoverImage{
+    width:80px;
+  }
   .region-menuheader{
     display:block;
     .first{
